--- a/src/style/theme.less
+++ b/src/style/theme.less
@@ -34,9 +34,9 @@
 /**
 * dialog
 */
-@dialog-button-text-primary-color: #0BB20C;
-@dialog-button-text-default-color: #353535;
-@dialog-button-text-warn-color: #E64340;
+@dialog-button-text-primary-color: #256fff;
+@dialog-button-text-default-color: #256fff;
+@dialog-button-text-warn-color: #256fff;
 
 /**
 * x-number
