--- a/src/style/theme.less
+++ b/src/style/theme.less
@@ -26,10 +26,10 @@
 /**
 * tab
 */
-@tab-text-disabled-color: #ddd;
-@tab-text-default-color: #666;
-@tab-text-active-color: @theme-color;
-@tab-bar-active-color: @theme-color;
+@tab-text-disabled-color: #7c7c7c;
+@tab-text-default-color: #7c7c7c;
+@tab-text-active-color: #256fff;
+@tab-bar-active-color: #256fff;
 
 /**
 * dialog
