--- a/static/css/global.less
+++ b/static/css/global.less
@@ -1,3 +1,4 @@
+@xian:#D8DFF0;
 .fl{
 	float: left;
 }
@@ -8,4 +9,17 @@
 	content: "";
 	display: block;
 	clear: both;
+}
+.border{border: 1px solid #333;}
+
+.ellipise{
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
+.ellipise2{
+	display: -webkit-box;
+	-webkit-box-orient: vertical;
+	-webkit-line-clamp: 2;
+	overflow: hidden;
 }
