--- a/src/style/theme.less
+++ b/src/style/theme.less
@@ -41,7 +41,7 @@
 /**
 * x-number
 */
-@number-button-font-color: #3cc51f;
+@number-button-font-color: #336fff;
 @number-input-font-color: #666;
 @number-button-enabled-border-color: #ececec;
 @number-square-button-enabled-border-color: @number-button-enabled-border-color;
