动画修复 多用户商城套餐页面

--- a/src/style/global.css
+++ b/src/style/global.css
@@ -24,6 +24,11 @@ i,em{font-style:normal;}
 
 /*原子类*/
 .clear { clear: both; }
+.clearfix:after{
+	content: "";
+	display: block;
+	clear: both;
+}
 .clear:after { display: block; clear: both; visibility: hidden; height: 0; overflow: hidden; content: "."; }
 .fl { float: left; }
 .fr { float: right; }
