--- a/src/style/global.css
+++ b/src/style/global.css
@@ -10,7 +10,7 @@ h1,h2,h3,h4,h5,h6{font-size:100%;font-weight: normal;}
 table{border-collapse:collapse;border-spacing:0}
 ul,ol,dd,dt,dl{list-style-type:none;}
 a{color:#333;text-decoration: none;-webkit-touch-callout: none;-webkit-user-select: none;}
-a,input,select{-webkit-tap-highlight-color: transparent;-webkit-appearance: none;-moz-appearance: none;-webkit-border-radius: 0;}
+a,input,select{-webkit-tap-highlight-color: transparent;/*-webkit-appearance: none;*/-moz-appearance: none;-webkit-border-radius: 0;}
 
 input,img{border:none;padding:0;font-size:14px;}
 
